--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@discordjs/builders": "^1.4.0",
     "@discordjs/rest": "^1.5.0",
     "discord-api-types": "^0.37.35",
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.7.1",
+    "mongodb": "^5.1.0"
   }
 }
